<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"> <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/createPlaylist"
    android:textSize="20sp"
    android:textStyle="bold"
    android:textColor="?attr/colorOnSurface"
    android:layout_marginBottom="16dp" />

    <com.github.libretube.ui.views.DropdownMenu
        android:id="@+id/create_playlist_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hint="@string/tooltip_options" />

    <LinearLayout
        android:id="@+id/create_playist_container_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="?attr/colorOnSurface"
            app:hintTextColor="?attr/colorOnSurface"
            android:hint="@string/playlistName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/playlist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_create"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorSecondary"
                android:text="@string/cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_new_playlist"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="?attr/colorOnSurface"
                android:text="@string/createNewPlaylist" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/clone_playlist_container_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="?attr/colorOnSurface"
            app:hintTextColor="?attr/colorOnSurface"
            android:hint="@string/playlistUrl">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/playlist_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_clone"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorSecondary"
                android:text="@string/cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clone_playlist"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="?attr/colorOnSurface"
                android:text="@string/clonePlaylist" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>