<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <LinearLayout
        android:id="@+id/downloads_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/playlist_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="?attr/colorOnSurface"
                android:textSize="20sp"
                android:textStyle="bold"
                android:ellipsize="end"
                tools:text="Downloaded Playlist Name"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sort_type"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                app:iconTint="?attr/colorOnSurface"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/sort_by"
                app:icon="@drawable/ic_sort"
                app:iconGravity="textEnd" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/downloads_recView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="88dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/downloads_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            app:tint="?android:attr/textColorSecondary"
            android:src="@drawable/ic_download" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:textColor="?android:attr/textColorSecondary"
            android:text="@string/emptyList"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/delete_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/delete_all"
        android:src="@drawable/ic_delete"
        app:tint="?attr/colorOnSurface"
        app:backgroundTint="?attr/colorSurface"
        app:elevation="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/shuffle_all"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="o"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shuffle_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/shuffle"
        android:src="@drawable/ic_shuffle"
        app:tint="?attr/colorSurface"
        app:backgroundTint="?attr/colorOnSurface"
        app:elevation="6dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="o"
        tools:visibility="visible" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>